--- a/displaytabs/tabs/common/SearchReceivable.html
+++ b/displaytabs/tabs/common/SearchReceivable.html
@@ -8,10 +8,10 @@
     </div>
     <div class="box-body">
         <div class="form-group">
-            <input type="text" class="form-control searchSalesOrderFilter" module="SalesOrderUI" tabName="_TABNAME_" placeholder="Search Sales Order">
+            <input type="text" class="form-control searchReceivableFilter" module="ReceivableUI" tabName="_TABNAME_" placeholder="Search Receivable">
         </div>
     </div>
 
-    <div class="box-body SalesOrderUI_SearchSalesOrders" module="SalesOrderUI" tabName="_TABNAME_" style="max-height: 500px; overflow-y: auto;">
+    <div class="box-body ReceivableUI_SearchReceivables" module="ReceivableUI" tabName="_TABNAME_" style="max-height: 500px; overflow-y: auto;">
     </div>
 </div>
