--- a/home.html
+++ b/home.html
@@ -367,6 +367,9 @@
   <script src="js/widgets/mylinks-widget.js"></script>
   <script src="js/widgets/chat-widget.js"></script>
 
+  <script src="js/modules/AbstractUI.js"></script>
+  <script src="js/modules/AbstractSubUI.js"></script>
+
   <script src="js/modules/submodules/AccountChartUI.js"></script>
   <script src="js/modules/submodules/AccountingDashboardUI.js"></script>
   <script src="js/modules/submodules/AccountingReportUI.js"></script>
@@ -405,14 +408,6 @@
 
   <script src="js/main-initializer.js"></script>
 
-  <script src="js/events/global-events-others.js"></script>
-  <script src="js/events/global-events-hr.js"></script>
-  <script src="js/events/global-events-accounting.js"></script>
-  <script src="js/events/global-events-government.js"></script>
-  <script src="js/events/global-events.js"></script>
-
-  <script src="js/mainJS.js"></script>
-
   <script src="js/modules/PersonalDashboardUI.js"></script>
   <script src="js/modules/RecruitmentUI.js"></script>
   <script src="js/modules/EmployeeUI.js"></script>
@@ -425,6 +420,15 @@
   <script src="js/modules/AccountingUI.js"></script>
   <script src="js/modules/ReferenceUI.js"></script>
   <script src="js/modules/ReportUI.js"></script>
+
+  <script src="js/events/global-events-others.js"></script>
+  <script src="js/events/global-events-hr.js"></script>
+  <script src="js/events/global-events-accounting.js"></script>
+  <script src="js/events/global-events-government.js"></script>
+  <script src="js/events/global-events.js"></script>
+
+  <script src="js/mainJS.js"></script>
+
 </body>
 
 </html>
