--- a/displaytabs/tabs/common/SearchSalesOrder.html
+++ b/displaytabs/tabs/common/SearchSalesOrder.html
@@ -8,10 +8,10 @@
     </div>
     <div class="box-body">
         <div class="form-group">
-            <input type="text" class="form-control searchSalesOrderFilter" module="SalesOrderUI" tabName="_TABNAME_" placeholder="Search Sales Order">
+            <input type="text" class="form-control searchFilter" module="SalesOrderUI" tabName="_TABNAME_" placeholder="Search Sales Order">
         </div>
     </div>
 
-    <div class="box-body SalesOrderUI_SearchSalesOrders" module="SalesOrderUI" tabName="_TABNAME_" style="max-height: 500px; overflow-y: auto;">
+    <div class="box-body searchRecords" module="SalesOrderUI" tabName="_TABNAME_" style="max-height: 500px; overflow-y: auto;">
     </div>
 </div>
