--- a/displaytabs/tabs/common/SearchBanking.html
+++ b/displaytabs/tabs/common/SearchBanking.html
@@ -6,12 +6,12 @@
 
         <h3 class="box-title">Search</h3>
     </div>
-    <div class="box-body">
+    <div class="box-body"> 
         <div class="form-group">
-            <input type="text" class="form-control searchBankingFilter" module="BankingUI" tabName="_TABNAME_" placeholder="Search Banking">
+            <input type="text" class="form-control searchFilter" module="BankingUI" tabName="_TABNAME_" placeholder="Search Banking">
         </div>
     </div>
 
-    <div class="box-body BankingUI_SearchBankings" module="BankingUI" tabName="_TABNAME_" style="max-height: 500px; overflow-y: auto;">
+    <div class="box-body searchRecords" module="BankingUI" tabName="_TABNAME_" style="max-height: 500px; overflow-y: auto;">
     </div>
 </div>
