--- a/displaytabs/AccountingUI-MainTemplate.html
+++ b/displaytabs/AccountingUI-MainTemplate.html
@@ -41,7 +41,7 @@
                         <a href="#Reports" data-toggle="tab" aria-expanded="false">Reports</a>
                     </li> 
                 </ul>
-                <div class="tab-content no-padding">
+                <div class="tab-content no-padding"> 
                     <div class="tab-pane active" id="Dashboard">
                         <pre>
                             Charts and Others
@@ -65,8 +65,8 @@
                                     <div class="box-header with-border">
                                         <h3 class="box-title">Bank Account</h3>
                                         <div class="box-tools pull-right" data-toggle="tooltip" title="" data-original-title="Status">
-                                            <button type="button" class="btn btn-info btnSaveBanking">Save Bank Account</button>
-                                            <button type="button" class="btn btn-default BankingUI_btnNewBanking"><i
+                                            <button type="button" class="btn btn-info btnSaveRecord" module="BankingUI">Save Bank Account</button>
+                                            <button type="button" class="btn btn-default btnNewRecord" module="BankingUI"><i
                                                     class="fa fa-plus"></i> New Bank Account</button>
                                         </div>
                                     </div>
