--- a/displaytabs/tabs/AccountingUI/BankingTransactions.html
+++ b/displaytabs/tabs/AccountingUI/BankingTransactions.html
@@ -57,7 +57,7 @@
                     </div>
                     <div style="flex: 4; margin-left: 10px;">
                         <div class="input-group" style="width: 100%;">
-                            <input rowIndex="----" type="text" class="form-control autocomplete" name="matchAccountCode"
+                            <input rowIndex="----" type="text" class="form-control autocomplete editRecordAutoComplete" name="matchAccountCode"
                                 placeholder="" module="BankingTransactionUI" mainmodule="BankingTransactionUI"
                                 autoname="matchAccountCode" helptitle="matchAccountCode">
                             <input rowIndex="----" class="form-control editRecord HiddenAutoComplete"
