--- a/displaytabs/tabs/common/SearchExpense.html
+++ b/displaytabs/tabs/common/SearchExpense.html
@@ -8,10 +8,10 @@
     </div>
     <div class="box-body">
         <div class="form-group">
-            <input type="text" class="form-control searchExpenseFilter" module="ExpenseUI" tabName="_TABNAME_" placeholder="Search Expense">
+            <input type="text" class="form-control searchFilter" module="ExpenseUI" tabName="_TABNAME_" placeholder="Search Expense">
         </div>
     </div>
 
-    <div class="box-body ExpenseUI_SearchExpenses" module="ExpenseUI" tabName="_TABNAME_" style="max-height: 500px; overflow-y: auto;">
+    <div class="box-body searchRecords" module="ExpenseUI" tabName="_TABNAME_" style="max-height: 500px; overflow-y: auto;">
     </div>
 </div>
