In Progress - Report 360

--- a/displaytabs/AccountingUI-MainTemplate.html
+++ b/displaytabs/AccountingUI-MainTemplate.html
@@ -89,7 +89,7 @@
                                 </div>
                             </div>
                             <div style="flex: 25%; margin: 15px 0px; margin-left: 15px;">
-                                <div class="DisplayTabCommon" tabName="Banking" tabUrl="SearchBanking"></div>
+                                <div class="DisplayTab" tabName="Banking" tabUrl="BankingSearch"></div>
                             </div>
                         </div>
                     </div>
@@ -130,7 +130,7 @@
                                 </div>
                             </div>
                             <div style="flex: 25%; margin: 15px 0px; margin-left: 15px;">
-                                <div class="DisplayTabCommon" tabName="SalesOrder" tabUrl="SearchSalesOrder"></div>
+                                <div class="DisplayTab" tabName="SalesOrder" tabUrl="SalesOrderSearch"></div>
                             </div>
                         </div>
                     </div>
@@ -183,7 +183,7 @@
                                 </div>
                             </div>
                             <div style="flex: 25%; margin: 15px 0px; margin-left: 15px;">
-                                <div class="DisplayTabCommon" tabName="Expense" tabUrl="SearchExpense"></div>
+                                <div class="DisplayTab" tabName="Expense" tabUrl="ExpenseSearch"></div>
                             </div>
                         </div>
                     </div>
@@ -224,7 +224,7 @@
                                 </div>
                             </div>
                             <div style="flex: 25%; margin: 15px 0px; margin-left: 15px;">
-                                <div class="DisplayTabCommon" tabName="Receivable" tabUrl="SearchReceivable"></div>
+                                <div class="DisplayTab" tabName="Receivable" tabUrl="ReceivableSearch"></div>
                             </div>
                         </div>
                     </div>
@@ -265,7 +265,7 @@
                                 </div>
                             </div>
                             <div style="flex: 25%; margin: 15px 0px; margin-left: 15px;">
-                                <div class="DisplayTabCommon" tabName="Payable" tabUrl="SearchPayable"></div>
+                                <div class="DisplayTab" tabName="Payable" tabUrl="SearchPayable"></div>
                             </div>
                         </div>
                     </div>
@@ -306,7 +306,7 @@
                                 </div>
                             </div>
                             <div style="flex: 25%; margin: 15px 0px; margin-left: 15px;">
-                                <div class="DisplayTabCommon" tabName="ManualEntry" tabUrl="SearchManualEntry"></div>
+                                <div class="DisplayTab" tabName="ManualEntry" tabUrl="ManualEntrySearch"></div>
                             </div>
                         </div>
                     </div>
@@ -355,7 +355,7 @@
                                 </div>
                             </div>
                             <div style="flex: 25%; margin: 15px 0px; margin-left: 15px;">
-                                <div class="DisplayTabCommon" tabName="TaxPeriod" tabUrl="SearchTaxPeriod"></div>
+                                <div class="DisplayTab" tabName="TaxPeriod" tabUrl="TaxPeriodSearch"></div>
                             </div>
                         </div>
                     </div>
@@ -409,7 +409,7 @@
                                 </div>
                             </div>
                             <div style="flex: 25%; margin: 15px 0px; margin-left: 15px;">
-                                <div class="DisplayTabCommon" tabName="AccountChart" tabUrl="SearchAccountChart"></div>
+                                <div class="DisplayTab" tabName="AccountChart" tabUrl="AccountChartSearch"></div>
                             </div>
                         </div>
                     </div>
@@ -438,7 +438,7 @@
                                 </div>
                             </div>
                             <div style="flex: 25%; margin: 15px 0px; margin-left: 15px;">
-                                <div class="DisplayTabCommon" tabName="Reconcile" tabUrl="SearchReconcile"></div>
+                                <div class="DisplayTab" tabName="Reconcile" tabUrl="ReconcileSearch"></div>
                             </div>
                         </div>
                     </div>
