--- a/displaytabs/tabs/AccountingUI/BankingSearch.html
+++ b/displaytabs/tabs/AccountingUI/BankingSearch.html
@@ -12,6 +12,6 @@
         </div>
     </div>
 
-    <div class="box-body searchRecords" module="BankingUI" tabName="_TABNAME_" style="max-height: 500px; overflow-y: auto;">
+    <div class="box-body searchRecords" module="BankingUI" tabName="_TABNAME_">
     </div>
 </div>
