In Progress - Report 360

--- a/displaytabs/tabs/AccountingUI/BankingSearch.html
+++ b/displaytabs/tabs/AccountingUI/BankingSearch.html
@@ -8,7 +8,7 @@
     </div>
     <div class="box-body"> 
         <div class="form-group">
-            <input type="text" class="form-control searchFilter" module="BankingUI" tabName="_TABNAME_" placeholder="Search Banking">
+            <input type="text" class="form-control searchFilter" module="BankingUI" tabName="_TABNAME_" name="mainFilter" placeholder="Search Banking" rowIndex="0">
         </div>
     </div>
 
