In Progress - Report 360

--- a/displaytabs/tabs/AccountingUI/BankingProfileMain.html
+++ b/displaytabs/tabs/AccountingUI/BankingProfileMain.html
@@ -1,12 +1,12 @@
 <div style="display: flex; flex: 100%;">
-    <input rowIndex="0" type="hidden" class="form-control editRecord" module="BankingUI" name="BankingId">
+    <input rowIndex="0" type="hidden" class="form-control editRecord subRecordSearchFilter" module="BankingUI" name="BankingId">
     <input rowIndex="0" type="hidden" class="form-control editRecord" module="BankingUI" name="code">
     <div class="form-group" style="flex: 3; margin-left: 10px;">
         <label class="control-label">Bank</label>
         <div class="input-group" style="width: 100%;">
-            <input rowIndex="0" type="text" class="form-control autocomplete" name="bankCode" placeholder="Payee" module="BankingUI" mainmodule="BankingUI" autoname="bankCode" helptitle="bankCode">
-            <input rowIndex="0" class="form-control editRecord HiddenAutoComplete" name="bankCode" type="hidden" module="BankingUI" mainmodule="BankingUI" autoNameField="bankCode" value="">
-            <div class="autocomplete-items" rowIndex="0" module="BankingUI" mainmodule="BankingUI" autoname="bankCode">
+            <input rowIndex="0" type="text" class="form-control autocomplete" name="bankCode" placeholder="Payee" module="BankingUI" autoname="bankCode" helptitle="bankCode">
+            <input rowIndex="0" class="form-control editRecord HiddenAutoComplete" name="bankCode" type="hidden" module="BankingUI" autoNameField="bankCode" value="">
+            <div class="autocomplete-items" rowIndex="0" module="BankingUI" autoname="bankCode">
             </div>
         </div> 
     </div>
