In Progress - Report 360

--- a/displaytabs/tabs/AccountingUI/BankingTransactions.html
+++ b/displaytabs/tabs/AccountingUI/BankingTransactions.html
@@ -17,56 +17,60 @@
     </div>
     <div class="box-body">
         <div style="display: flex; flex-direction: column;">
-            <div class="hiddenRecordTemplate" module="BankingTransactionUI" style="display: none;">
-                <div style="display: flex; width: 100%;" class="BankingTransactionRecord" rowIndex="----">
+            <div class="hiddenRecordTemplate" module="BankingTransactionUI" parentModule="BankingUI" style="display: none;">
+                <div style="display: flex; width: 100%;" class="subRecord" module="BankingTransactionUI" rowIndex="----">
                     <div style="flex: 1; text-align: right;">
                         <i style="margin-right: 5px;">----</i>
                     </div>
                     <div style="flex: 2;">
-                        <input rowIndex="----" name="transactionDate" module="BankingTransactionUI" type="text"
-                            class="form-control editRecord calendar" placeholder=""/>
+                        <input rowIndex="----" name="transactionDate" module="BankingTransactionUI" parentModule="BankingUI" type="text"
+                            class="form-control editRecord calendar autoSaveSubRecord" placeholder=""/>
                     </div>
                     <div style="flex: 4;">
-                        <input rowIndex="----" name="description" module="BankingTransactionUI" type="text"
-                            class="form-control editRecord" placeholder="">
+                        <input rowIndex="----" name="description" module="BankingTransactionUI" parentModule="BankingUI" type="text"
+                            class="form-control editRecord autoSaveSubRecord" placeholder="">
                     </div>
                     <div style="flex: 4;">
-                        <input rowIndex="----" name="payee" module="BankingTransactionUI" type="text"
-                            class="form-control editRecord" placeholder="">
+                        <input rowIndex="----" name="payee" module="BankingTransactionUI" parentModule="BankingUI" type="text"
+                            class="form-control editRecord autoSaveSubRecord" placeholder="">
                     </div>
                     <div style="flex: 2;">
-                        <input rowIndex="----" name="tax" module="BankingTransactionUI" type="text"
-                            class="form-control editRecord" placeholder="">
+                        <input rowIndex="----" name="tax" module="BankingTransactionUI" parentModule="BankingUI" type="text"
+                            class="form-control editRecord autoSaveSubRecord" placeholder="">
                     </div>
                     <div style="flex: 2;">
-                        <input rowIndex="----" name="spent" module="BankingTransactionUI" type="text"
-                            class="form-control editRecord" placeholder="">
+                        <input rowIndex="----" name="spent" module="BankingTransactionUI" parentModule="BankingUI" type="text"
+                            class="form-control editRecord autoSaveSubRecord" placeholder="">
                     </div>
                     <div style="flex: 2;">
-                        <input rowIndex="----" name="received" module="BankingTransactionUI" type="text"
-                            class="form-control editRecord" placeholder="">
+                        <input rowIndex="----" name="received" module="BankingTransactionUI" parentModule="BankingUI" type="text"
+                            class="form-control editRecord autoSaveSubRecord" placeholder="">
                     </div>
                     <div style="flex: 4;">
                         <div class="input-group" style="width: 100%;">
                             <input rowIndex="----" type="text" class="form-control autocomplete editRecordAutoComplete" name="matchAccountCode"
-                                placeholder="" module="BankingTransactionUI" mainmodule="BankingTransactionUI"
+                                placeholder="" module="BankingTransactionUI" parentModule="BankingUI"
                                 autoname="matchAccountCode" helptitle="matchAccountCode"/>
-                            <span rowindex="----" autoname="matchAccountCode" module="BankingTransactionUI" class="btnAutoClearSelected input-group-addon" title="Clear Selected"><i class="fa fa-remove"></i></span>
-                            <div class="autocomplete-items" rowIndex="----" module="BankingTransactionUI"
-                                mainmodule="BankingTransactionUI" autoname="matchAccountCode">
+                            <span rowindex="----" autoname="matchAccountCode" module="BankingTransactionUI" parentModule="BankingUI" class="btnAutoClearSelected input-group-addon" title="Clear Selected">
+                                <i class="fa fa-remove"></i></span>
+                            <div class="autocomplete-items" rowIndex="----" parentModule="BankingUI"
+                                module="BankingTransactionUI" autoname="matchAccountCode">
                             </div>
                         </div>
-                        <input rowIndex="----" class="form-control editRecord HiddenAutoComplete"
-                            name="matchAccountCode" type="hidden" module="BankingTransactionUI"
-                            mainmodule="BankingTransactionUI" autoNameField="matchAccountCode" value=""/>
+                        <input rowIndex="----" class="form-control editRecord autoSaveSubRecord HiddenAutoComplete"
+                            name="matchAccountCode" type="hidden" parentModule="BankingUI"
+                            module="BankingTransactionUI" autoNameField="matchAccountCode" value=""/>
                     </div>
                     <div style="flex: 1; text-align: left; margin-top: 7px;">
-                        <input rowIndex="----" name="code" module="BankingTransactionUI" type="hidden"
-                            class="form-control" placeholder=""/>
-                        <input rowIndex="----" name="bankingCode" module="BankingTransactionUI" type="hidden"
-                            class="form-control" placeholder=""/>
+                        <input rowIndex="----" name="code" module="BankingTransactionUI" parentModule="BankingUI" type="hidden"
+                            class="form-control editRecord" placeholder=""/>
+                        <input rowIndex="----" name="bankingCode" module="BankingTransactionUI" parentModule="BankingUI" type="hidden"
+                            class="form-control editRecord" placeholder=""/>
                         <a href="#" class="btnSaveSubRecord" rowIndex="----" module="BankingTransactionUI" parentModule="BankingUI" title="Save #----">
                             <i class="fa fa-save" style="margin-left: 5px;"></i>
+                        </a>
+                        <a href="#" class="btnDeleteSubRecord" rowIndex="----" module="BankingTransactionUI" parentModule="BankingUI" title="Remove #----">
+                            <i class="fa fa-remove" style="margin-left: 5px;"></i>
                         </a>
                     </div>
                 </div>
