--- a/displaytabs/AccountingUI-MainTemplate.html
+++ b/displaytabs/AccountingUI-MainTemplate.html
@@ -65,8 +65,8 @@
                                     <div class="box-header with-border">
                                         <h3 class="box-title">Bank Account</h3>
                                         <div class="box-tools pull-right" data-toggle="tooltip" title="" data-original-title="Status">
-                                            <button type="button" class="btn btn-info btnSaveRecord" module="BankingUI">Save Bank Account</button>
-                                            <button type="button" class="btn btn-default btnNewRecord" module="BankingUI"><i
+                                            <button type="button" class="btn btn-success btnSaveRecord" module="BankingUI">Save Bank Account</button>
+                                            <button type="button" class="btn btn-info btnNewRecord" module="BankingUI"><i
                                                     class="fa fa-plus"></i> New Bank Account</button>
                                         </div>
                                     </div>
