--- a/displaytabs/tabs/AccountingUI/BankingTransactions.html
+++ b/displaytabs/tabs/AccountingUI/BankingTransactions.html
@@ -5,13 +5,16 @@
         <h3 class="box-title">Transaction Details</h3>
         <div class="box-tools pull-right" data-toggle="tooltip" title="" data-original-title="Status">
             <div style="display: flex;">
-                <i style="margin: 5px; margin-right: 10px;">Filter&nbsp;Date </i>
-                <input name="bankingTransactionDate" module="BankingUI" subModule="BankingTransactionUI" type="text" class="form-control subRecordSearchFilter calendar" rowIndex="0" placeholder="Filter Date"/>
                 <div class="checkbox" style="margin: 5px; margin-right: 10px;">
                     <label>
                       <input type="checkbox" name="showUnspecifiedOnly" module="BankingUI" subModule="BankingTransactionUI" class="subRecordSearchFilter" rowIndex="0" value="true"> Show&nbsp;Unmatched&nbsp;Only
                     </label>
                 </div>
+                <i style="margin: 5px; margin-right: 10px;">Filter&nbsp;Date </i>
+                <input name="bankingTransactionDate" module="BankingUI" subModule="BankingTransactionUI" type="text" class="form-control subRecordSearchFilter calendar" rowIndex="0" placeholder="Filter Date"/>
+                <button class="btn btn-default btnMoreSubRecord" module="BankingTransactionUI" parentmodule="BankingUI" style="margin-left: 10px;">
+                    <i class="fa fa-plus"></i> More Records
+                </button>
             </div>
         </div>
     </div>
